@@ -11,6 +11,7 @@ Revision history for Perl extension Test::Apocalypse
 	Added Pod::Coverage::TrustPod as the coverage class for Test::Pod::Coverage
 	Fixed a bug in Test::Spelling where the file stopwords weren't added right
 	Fixed a bug in OutdatedPrereqs where it complained if the CPAN version was older than what was specified.
+	Added Test::Pod::LinkCheck to the testsuite
 
 * 0.10
 
